--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,11 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer-dash:1.0.0"
     implementation "androidx.media3:media3-exoplayer-hls:1.0.0"
     implementation "androidx.media3:media3-ui:1.0.0"
-    //implementation "androidx.media3:media3-cast:1.0.0"
+    implementation "androidx.media3:media3-cast:1.0.0"
 
-    implementation "com.google.android.gms:play-services-cast-framework:21.3.0"
+    //todo 21.3.0 session resume & notification is buggy
+    implementation "com.google.android.gms:play-services-cast-framework:21.2.0"
+
     implementation "com.google.android.material:material:1.8.0"
 
     //todo remove fix (https://stackoverflow.com/questions/69817925/problem-duplicate-class-androidx-lifecycle-viewmodel-found-in-modules)
